deploy/k8s/identity-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-deployment
  labels:
    app: identity
spec:
  selector:
    matchLabels:
      app: identity
  template:
    metadata:
      labels:
        app: identity
    spec:
      containers:
        - name: identity-deployment
          image: beeapps.azurecr.io/identity.webapi:v2
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: beeapps-secret-azurecr
