deploy/k8s/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-statefulset
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: "postgres-service"
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:bullseye
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: volume
              mountPath: /var/lib/postgresql/data
              subPath: pgdata
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: postgres-pvc
