deploy/k8s/identity-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-service
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: identity
