deploy/k8s/identity-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: identity-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - identity.beeapps.org
      secretName: tls-secret
  rules:
  - host: identity.beeapps.org
    http:
      paths:
        - path: /(.*)
          pathType: Prefix
          backend:
            service:
              name: identity-service
              port:
                number: 80
